--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <button class="px-4 py-2 category-button" onclick="showCategory('dress')">Dress</button>
             <button class="px-4 py-2 category-button" onclick="showCategory('pants')">Pants</button>
             <button class="px-4 py-2 category-button" onclick="showCategory('blazers')">Blazers</button>
-            <button class="px-4 py-2 category-button" onclick="showCategory('jackets')">Jackets</button>
+            <button class="px-4 py-2 category-button" onclick="showCategory('jackets')">Winter</button>
         </div>
         <!-- Product List -->
         <div class="p-4 grid grid-cols-2 gap-4" id="all">
