--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 
     <!-- Cart Icon -->
-    <div class="fixed bottom-4 left-4 bg-red-500 text-white rounded-full w-16 h-16 flex items-center justify-center cursor-pointer" id="cart-icon">
+    <div class="fixed bottom-4 left-4 bg-green-500 text-white rounded-full w-16 h-16 flex items-center justify-center cursor-pointer" id="cart-icon">
         <i class="fas fa-shopping-cart text-2xl"></i>
     </div>
 
