--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
   </style>
 
  </head>
- <body class="bg-gray-100">
+ <body class="bg-gray-100 overflow-x-hidden">
   <div class="flex items-center justify-between p-4 relative bg-white shadow-md">
    <div class="relative">
-    <img alt="Empty Profile Icon" class="w-10 h-10 rounded-full cursor-pointer" height="40" id="profile-icon" onclick="toggleProfilePopup()" src="https://storage.googleapis.com/a1aa/image/JSs-9CtB5B8TeLHj_tEnlGp1I--Qzb9IwBZr5tw_R0w.jpg" width="40"/>
+    <img alt="Empty Profile Icon" class="w-10 h-10 rounded-full cursor-pointer" height="40" id="profile-icon" onclick="toggleProfilePopup()" src="https://storage.googleapis.com/a1aa/image/dW_whs8jHB6LZufF8bDlqLCkXeHz4aR-gsBhtYbTVJ8.jpg" width="40"/>
     <div class="absolute top-12 left-0 bg-white border rounded-md shadow-md p-4 hidden" id="profile-popup">
      <button class="absolute top-2 right-2 text-xl" onclick="toggleProfilePopup()">
       ×
      </button>
-     <img alt="Profile Photo" class="w-16 h-16 rounded-full mx-auto" height="100" id="profile-photo" src="" width="100"/>
+     <img alt="Empty Profile Photo" class="w-16 h-16 rounded-full mx-auto" height="100" id="profile-photo" src="https://storage.googleapis.com/a1aa/image/yuct0nsnFVKxBl2X7Hx6NpfFZJwsKFYVncCKhfGPakQ.jpg" width="100"/>
      <p class="text-center mt-2" id="profile-name">
      </p>
      <table class="w-full mt-4">
@@ -82,8 +82,11 @@
    </button>
   </div>
   <!-- Login Popup -->
-  <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden" id="login-popup">
-   <div class="bg-blue-500 p-6 rounded-md shadow-md relative animate-slide-down">
+  <div class="fixed inset-0 bg-black bg-opacity-50 flex items-end justify-center hidden" id="login-popup">
+   <div class="bg-blue-500 p-6 rounded-t-md shadow-md relative animate-slide-up">
+    <h2 class="text-2xl font-bold text-center text-red-500 mb-4">
+     Trendy Tides
+    </h2>
     <button class="absolute top-2 right-2 text-xl text-white" onclick="toggleLoginPopup()">
      ×
     </button>
@@ -122,24 +125,36 @@
     </button>
    </div>
   </div>
-        <!-- Search Bar -->
- <div class="p-4">
-        <div class="relative">
-            <i class="fas fa-microphone absolute left-3 top-3 text-green-500"></i>
-            <input class="w-full p-2 pl-10 border border-blue-500 rounded-full italic text-red-500 font-bold text-center" id="search-input" placeholder="Shop for jewelry" type="text" maxlength="15"/>
-            <i class="fas fa-search absolute right-3 top-3 text-green-500 font-bold"></i>
-            <div id="suggestions-box" class="absolute w-full bg-white border rounded-lg mt-1 z-10 max-h-40 overflow-y-auto text-xs"></div>
-        </div>
+  <!-- Search Bar -->
+  <div class="p-4" id="search-bar">
+   <div class="relative">
+    <i class="fas fa-microphone absolute left-3 top-3 text-green-500">
+    </i>
+    <input class="w-full p-2 pl-10 border border-blue-500 rounded-full italic text-red-500 font-bold text-center" id="search-input" maxlength="15" placeholder="Shop for jewelry" type="text"/>
+    <i class="fas fa-search absolute right-3 top-3 text-green-500 font-bold">
+    </i>
+    <div class="absolute w-full bg-white border rounded-lg mt-1 z-10 max-h-40 overflow-y-auto text-xs" id="suggestions-box">
     </div>
-
-        <!-- Categories -->
-        <div class="flex justify-around p-4 border-b">
-            <button class="px-4 py-2 category-button active" onclick="showCategory('all')">All</button>
-            <button class="px-4 py-2 category-button" onclick="showCategory('dress')">Dress</button>
-            <button class="px-4 py-2 category-button" onclick="showCategory('pants')">Pants</button>
-            <button class="px-4 py-2 category-button" onclick="showCategory('blazers')">Blazers</button>
-            <button class="px-4 py-2 category-button" onclick="showCategory('jackets')">Winter</button>
-        </div>
+   </div>
+  </div>
+  <!-- Categories -->
+  <div class="flex justify-around p-4 border-b">
+   <button class="px-4 py-2 category-button active" onclick="showCategory('all')">
+    All
+   </button>
+   <button class="px-4 py-2 category-button" onclick="showCategory('dress')">
+    Dress
+   </button>
+   <button class="px-4 py-2 category-button" onclick="showCategory('pants')">
+    Pants
+   </button>
+   <button class="px-4 py-2 category-button" onclick="showCategory('blazers')">
+    Blazers
+   </button>
+   <button class="px-4 py-2 category-button" onclick="showCategory('jackets')">
+    Jackets
+   </button>
+  </div>
         <!-- Product List -->
         <div class="p-4 grid grid-cols-2 gap-4" id="all">
             <div class="space-y-2 cursor-pointer product-item dress">
@@ -332,20 +347,32 @@ function showCategory(category) {
 
 
 
- function toggleLoginPopup() {
-            const popup = document.getElementById('login-popup');
-            popup.classList.toggle('hidden');
-            if (!popup.classList.contains('hidden')) {
-                popup.classList.add('animate-slide-down');
-            } else {
-                popup.classList.remove('animate-slide-down');
-            }
+  function toggleProfilePopup() {
+            const profilePopup = document.getElementById('profile-popup');
+            const searchBar = document.getElementById('search-bar');
+            profilePopup.classList.toggle('hidden');
+            searchBar.classList.toggle('hidden');
         }
 
-        function toggleProfilePopup() {
-            const popup = document.getElementById('profile-popup');
-            popup.classList.toggle('hidden');
+        function toggleLoginPopup() {
+            const loginPopup = document.getElementById('login-popup');
+            const searchBar = document.getElementById('search-bar');
+            const searchInput = document.getElementById('search-input');
+            loginPopup.classList.toggle('hidden');
+            searchBar.classList.toggle('hidden');
+            searchInput.disabled = !searchInput.disabled;
         }
+
+        // Hide profile popup when clicking outside
+        document.addEventListener('click', function(event) {
+            const profilePopup = document.getElementById('profile-popup');
+            const profileIcon = document.getElementById('profile-icon');
+            if (!profilePopup.contains(event.target) && !profileIcon.contains(event.target)) {
+                profilePopup.classList.add('hidden');
+                document.getElementById('search-bar').classList.remove('hidden');
+                document.getElementById('login-btn').classList.remove('hidden');
+            }
+        });
 
         function showToast(message, type) {
             const toast = document.createElement('div');
@@ -406,7 +433,7 @@ function showCategory(category) {
             localStorage.removeItem('loginData');
             document.getElementById('profile-name').innerText = '';
             document.getElementById('profile-photo').src = '';
-            document.getElementById('profile-icon').src = 'https://storage.googleapis.com/a1aa/image/JSs-9CtB5B8TeLHj_tEnlGp1I--Qzb9IwBZr5tw_R0w.jpg';
+            document.getElementById('profile-icon').src = 'https://placehold.co/50x50?text=Profile+Icon';
             document.getElementById('profile-username').innerText = '';
             document.getElementById('profile-phone').innerText = '';
             document.getElementById('profile-address').innerText = '';
@@ -452,7 +479,6 @@ function showCategory(category) {
         }
 
         document.addEventListener('DOMContentLoaded', checkLoginStatus);
-
  
 
 
