--- a/index.html
+++ b/index.html
@@ -282,6 +282,188 @@
     </div>
 
 
+
+
+
+
+
+
+
+
+   <div class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden" id="buyNowModal">
+   <div class="bg-white rounded-lg p-2 w-full max-w-xs relative">
+    <button class="absolute top-2 right-2 text-white bg-red-500 hover:bg-red-700 rounded-full p-1" id="closeModal">
+     <i class="fas fa-times">
+     </i>
+    </button>
+    <div class="flex flex-col md:flex-row">
+     <div class="md:w-1/3">
+      <img alt="Selected product image" class="w-full h-20 object-cover rounded-lg" id="modalImage"/>
+      <div class="text-sm text-gray-500 mt-2 flex items-center">
+       Price: $
+       <span id="modalPrice" data-base-price="">
+       </span>
+       <span class="text-green-500 ml-2">
+        Free Delivery
+       </span>
+      </div>
+      <div class="flex items-center mt-2">
+       <button class="px-2 py-1 border rounded-lg text-xs" id="decrementQuantity">
+        -
+       </button>
+       <input class="mx-2 w-10 text-center border rounded-lg" id="quantity" readonly type="text" value="1"/>
+       <button class="px-2 py-1 border rounded-lg text-xs" id="incrementQuantity">
+        +
+       </button>
+      </div>
+     </div>
+     <div class="md:w-2/3 md:pl-2 mt-4 md:mt-0">
+      <form id="buyNowForm">
+       <div class="mb-1">
+        <label class="block text-sm font-medium text-gray-700" for="name">
+         Name
+        </label>
+        <input class="mt-1 block w-full border rounded-lg p-1" id="name" name="name" required type="text"/>
+       </div>
+       <div class="mb-1">
+        <label class="block text-sm font-medium text-gray-700" for="address">
+         Address with Code
+        </label>
+        <input class="mt-1 block w-full border rounded-lg p-1" id="address" name="address" required type="text"/>
+       </div>
+       <div class="mb-1">
+        <label class="block text-sm font-medium text-gray-700" for="city">
+         City
+        </label>
+        <div class="grid grid-cols-2 gap-1">
+         <select class="mt-1 block w-full border rounded-lg p-1" id="city" name="city" required>
+          <option value="damak">
+           Damak
+          </option>
+          <option value="dharan">
+           Dharan
+          </option>
+          <option value="illam">
+           Illam
+          </option>
+          <option value="ithari">
+           Ithari
+          </option>
+          <option value="janakpur">
+           Janakpur
+          </option>
+          <option value="lahan">
+           Lahan
+          </option>
+          <option value="rajbiraj">
+           Rajbiraj
+          </option>
+          <option value="rengali">
+           Rengali
+          </option>
+         </select>
+         <input class="mt-1 block w-full border rounded-lg p-1 text-xs text-red-500" id="promoCode" name="promoCode" type="text" placeholder="Promo Code (Optional)"/>
+        </div>
+       </div>
+       <div class="mb-1">
+        <label class="block text-sm font-medium text-gray-700" for="phone">
+         Phone
+        </label>
+        <input class="mt-1 block w-full border rounded-lg p-1" id="phone" name="phone" required type="text"/>
+       </div>
+       <div class="mb-1">
+        <label class="block text-sm font-medium text-gray-700" for="payment">
+         Payment Option
+        </label>
+        <select class="mt-1 block w-full border rounded-lg p-1" id="payment" name="payment" required>
+         <option value="esewa">
+          eSewa
+         </option>
+         <option value="ime">
+          IME
+         </option>
+         <option value="khalti">
+          Khalti
+         </option>
+        </select>
+       </div>
+       <div class="mb-1">
+        <label class="block text-sm font-medium text-gray-700" for="upload">
+         Upload Photo
+        </label>
+        <input class="mt-1 block w-full border rounded-lg p-1" id="upload" name="upload" required type="file"/>
+       </div>
+       <button class="w-full bg-black text-white rounded-lg p-2" type="submit">
+        Buy
+       </button>
+      </form>
+     </div>
+    </div>
+   </div>
+  </div>
+  <div class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden" id="qrModal">
+   <div class="bg-white rounded-lg p-2 w-full max-w-xs relative">
+    <button class="absolute top-2 right-2 text-white bg-red-500 hover:bg-red-700 rounded-full p-1" id="closeQrModal">
+     <i class="fas fa-times">
+     </i>
+    </button>
+    <div class="text-center">
+     <img alt="QR code for payment" class="w-32 h-32 mx-auto" src="https://placehold.co/200x200?text=QR+Code"/>
+     <div class="text-red-500 mt-2">
+      Scan QR, pay and take a screenshot and send.
+     </div>
+    </div>
+   </div>
+  </div>
+  <div class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden" id="confirmationModal">
+   <div class="bg-white rounded-lg p-4 w-full max-w-xs relative">
+    <button class="absolute top-2 right-2 text-white bg-red-500 hover:bg-red-700 rounded-full p-1" id="closeConfirmationModal">
+     <i class="fas fa-times">
+     </i>
+    </button>
+    <div class="text-center">
+     <h2 class="text-blue-500 text-lg font-bold">Trendy Tides</h2>
+     <img alt="Selected product image" class="w-20 h-20 mx-auto rounded-lg" id="confirmationImage"/>
+     <div class="text-sm text-gray-500 mt-2">
+      <span id="confirmationItemName">
+      </span>
+     </div>
+     <div class="text-sm text-gray-500 mt-2">
+      Price: $
+      <span id="confirmationPrice">
+      </span>
+     </div>
+     <div class="text-sm text-gray-500 mt-2">
+      Name: 
+      <span id="confirmationName">
+      </span>
+     </div>
+     <div class="text-sm text-gray-500 mt-2">
+      City: 
+      <span id="confirmationCity">
+      </span>
+     </div>
+     <div class="text-sm text-gray-500 mt-2">
+      Phone: 
+      <span id="confirmationPhone">
+      </span>
+     </div>
+     <div class="text-sm text-gray-500 mt-2">
+      Payment: 
+      <span id="confirmationPayment">
+      </span>
+     </div>
+     <button class="w-full bg-black text-white rounded-lg p-2 mt-4" id="downloadPdf">
+      Download PDF
+     </button>
+     <button class="w-full bg-black text-white rounded-lg p-2 mt-4" id="backToShop">
+      Back to Shop
+     </button>
+    </div>
+   </div>
+  </div>
+
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
   <script>
 function showCategory(category) {
     const categories = ['all', 'dress', 'pants', 'blazers', 'jackets'];
@@ -639,6 +821,156 @@ function showCategory(category) {
 
             cycleSearchTerms();
         });
+
+
+
+
+
+
+
+     document.querySelectorAll('.buy-now').forEach(button => {
+    button.addEventListener('click', function() {
+      const name = this.getAttribute('data-name');
+      const price = this.getAttribute('data-price');
+      const image = this.getAttribute('data-image');
+      document.getElementById('modalImage').src = image;
+      document.getElementById('modalPrice').innerText = price;
+      document.getElementById('modalPrice').setAttribute('data-base-price', price);
+      document.getElementById('quantity').value = 1;
+      document.getElementById('buyNowModal').classList.remove('hidden');
+    });
+   });
+
+   document.getElementById('closeModal').addEventListener('click', function() {
+    document.getElementById('buyNowModal').classList.add('hidden');
+   });
+
+   document.getElementById('incrementQuantity').addEventListener('click', function() {
+    const quantityInput = document.getElementById('quantity');
+    let quantity = parseInt(quantityInput.value);
+    if (quantity < 4) {
+      quantity++;
+      quantityInput.value = quantity;
+      updatePrice();
+    }
+   });
+
+   document.getElementById('decrementQuantity').addEventListener('click', function() {
+    const quantityInput = document.getElementById('quantity');
+    let quantity = parseInt(quantityInput.value);
+    if (quantity > 1) {
+      quantity--;
+      quantityInput.value = quantity;
+      updatePrice();
+    }
+   });
+
+   function updatePrice() {
+    const basePrice = parseFloat(document.getElementById('modalPrice').getAttribute('data-base-price'));
+    const quantity = parseInt(document.getElementById('quantity').value);
+    const discount = (quantity - 1) * 0.10;
+    const promoCode = document.getElementById('promoCode').value.trim();
+    let totalPrice = basePrice * (1 - discount) * quantity;
+    if (promoCode) {
+      totalPrice *= 0.85; // Apply 15% discount for promo code
+    }
+    document.getElementById('modalPrice').innerText = totalPrice.toFixed(2);
+   }
+
+   document.getElementById('payment').addEventListener('change', function() {
+    document.getElementById('qrModal').classList.remove('hidden');
+   });
+
+   document.getElementById('closeQrModal').addEventListener('click', function() {
+    document.getElementById('qrModal').classList.add('hidden');
+   });
+
+   document.getElementById('buyNowForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+    const name = document.getElementById('name').value;
+    const city = document.getElementById('city').value;
+    const phone = document.getElementById('phone').value;
+    const payment = document.getElementById('payment').value;
+    const price = document.getElementById('modalPrice').innerText;
+    const itemName = document.querySelector('.buy-now[data-name]').getAttribute('data-name');
+    const image = document.getElementById('modalImage').src;
+
+    const receipt = {
+      itemName,
+      price,
+      name,
+      city,
+      phone,
+      payment,
+      image,
+      timestamp: new Date().getTime()
+    };
+
+    localStorage.setItem(itemName, JSON.stringify(receipt));
+
+    document.getElementById('confirmationImage').src = image;
+    document.getElementById('confirmationItemName').innerText = itemName;
+    document.getElementById('confirmationPrice').innerText = price;
+    document.getElementById('confirmationName').innerText = name;
+    document.getElementById('confirmationCity').innerText = city;
+    document.getElementById('confirmationPhone').innerText = phone;
+    document.getElementById('confirmationPayment').innerText = payment;
+
+    document.getElementById('buyNowModal').classList.add('hidden');
+    document.getElementById('confirmationModal').classList.remove('hidden');
+   });
+
+   document.getElementById('closeConfirmationModal').addEventListener('click', function() {
+    document.getElementById('confirmationModal').classList.add('hidden');
+   });
+
+   document.getElementById('downloadPdf').addEventListener('click', function() {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+
+    const itemName = document.getElementById('confirmationItemName').innerText;
+    const price = document.getElementById('confirmationPrice').innerText;
+    const name = document.getElementById('confirmationName').innerText;
+    const city = document.getElementById('confirmationCity').innerText;
+    const phone = document.getElementById('confirmationPhone').innerText;
+    const payment = document.getElementById('confirmationPayment').innerText;
+    const image = document.getElementById('confirmationImage').src;
+
+    doc.text('Trendy Tides', 105, 10, null, null, 'center');
+    doc.setTextColor(0, 0, 255);
+    doc.text(`Item Name: ${itemName}`, 10, 20);
+    doc.text(`Price: $${price}`, 10, 30);
+    doc.text(`Name: ${name}`, 10, 40);
+    doc.text(`City: ${city}`, 10, 50);
+    doc.text(`Phone: ${phone}`, 10, 60);
+    doc.text(`Payment: ${payment}`, 10, 70);
+
+    doc.addImage(image, 'JPEG', 10, 80, 50, 50);
+
+    doc.save('order-details.pdf');
+   });
+
+   document.getElementById('backToShop').addEventListener('click', function() {
+    document.getElementById('confirmationModal').classList.add('hidden');
+   });
+
+   document.querySelectorAll('.item-photo').forEach(photo => {
+    photo.addEventListener('click', function(event) {
+      event.stopPropagation();
+      const itemName = this.closest('.product-item').getAttribute('data-name');
+      const receipt = JSON.parse(localStorage.getItem(itemName));
+      if (receipt && new Date().getTime() - receipt.timestamp < 7 * 24 * 60 * 60 * 1000) {
+        document.getElementById('confirmationImage').src = receipt.image;
+        document.getElementById('confirmationItemName').innerText = receipt.itemName;
+        document.getElementById('confirmationPrice').innerText = receipt.price;
+        document.getElementById('confirmationName').innerText = receipt.name;
+        document.getElementById('confirmationCity').innerText = receipt.city;
+        document.getElementById('confirmationPhone').innerText = receipt.phone;
+        document.getElementById('confirmationPayment').innerText = receipt.payment;
+        document.getElementById('confirmationModal').classList.remove('hidden');
+      }
+    });
+   });
   </script>
  </body>
 </html>
