--- a/index.html
+++ b/index.html
@@ -118,101 +118,108 @@
     </div>
     
         <!-- Product List -->
-        <div class="p-4 grid grid-cols-2 gap-4" id="all">
-            <div class="space-y-2 cursor-pointer product-item dress">
-                <img alt="Sequin Backles dress on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/JRt1-arjmOAWRnRnFoVOh7gUIJhCJ-SdFBeC4LtHbg8.jpg" width="150"/>
-                <div class="text-sm product-name">Sequin Backles</div>
-                <div class="text-sm text-gray-500 product-price">$100.99 <span class="text-red-500">10% Off</span></div>
-                <div class="flex space-x-2">
-                    <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                    <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
-                </div>
+         <div class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4" id="all">
+        <div class="space-y-2 cursor-pointer product-item lehanga" data-name="Traditional Red Lehanga" data-price="300.99" data-image="https://storage.googleapis.com/a1aa/image/x9N3dCWEzBAG79kAu7fEZcTV84uWrOCM0UoB90qxltI.jpg">
+            <img alt="Traditional Red Lehanga on a mannequin" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/x9N3dCWEzBAG79kAu7fEZcTV84uWrOCM0UoB90qxltI.jpg" width="300"/>
+            <div class="text-sm product-name">Traditional Red Lehanga</div>
+            <div class="text-sm text-gray-500 product-price">$300.99 <span class="text-red-500">10% Off</span></div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs buy-now" data-name="Traditional Red Lehanga" data-price="300.99" data-image="https://storage.googleapis.com/a1aa/image/x9N3dCWEzBAG79kAu7fEZcTV84uWrOCM0UoB90qxltI.jpg">Buy Now</button>
             </div>
-            <div class="space-y-2 cursor-pointer product-item dress">
-                <img alt="Casual Beach dress on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/xpdQXvr7JdhquEtGowr-sALc8mIP9GcJKXnIj0V3AKI.jpg" width="150"/>
-                <div class="text-sm product-name">Casual Beach</div>
-                <div class="text-sm text-gray-500 product-price">$120.99</div>
-                <div class="flex space-x-2">
-                    <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                    <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
-                </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item dress" data-name="Beach Dress" data-price="156.99" data-image="https://storage.googleapis.com/a1aa/image/8-cV9q2grVC4VYyLCW8xJBl1qtft5tHto_abEeDFT1I.jpg">
+            <img alt="Beach Dress on a hanger" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/8-cV9q2grVC4VYyLCW8xJBl1qtft5tHto_abEeDFT1I.jpg" width="150"/>
+            <div class="text-sm product-name">Beach Dress</div>
+            <div class="text-sm text-gray-500 product-price">$156.99</div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs buy-now" data-name="Beach Dress" data-price="156.99" data-image="https://storage.googleapis.com/a1aa/image/8-cV9q2grVC4VYyLCW8xJBl1qtft5tHto_abEeDFT1I.jpg">Buy Now</button>
             </div>
-            <div class="space-y-2 cursor-pointer product-item dress">
-                <img alt="Boho Strappy dress on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/qGXvATDdkpu0588vloa429WDCLVGFXFLOUsCJLndW6s.jpg" width="150"/>
-                <div class="text-sm product-name">Boho Strappy</div>
-                <div class="text-sm text-gray-500 product-price">$110.99 <span class="text-red-500">30% Off</span></div>
-                <div class="flex space-x-2">
-                    <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                    <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
-                </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item dress">
+            <img alt="Sequin Backles dress on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/JRt1-arjmOAWRnRnFoVOh7gUIJhCJ-SdFBeC4LtHbg8.jpg" width="150"/>
+            <div class="text-sm product-name">Sequin Backles</div>
+            <div class="text-sm text-gray-500 product-price">$100.99 <span class="text-red-500">10% Off</span></div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
-            <div class="space-y-2 cursor-pointer product-item dress">
-                <img alt="Beach Dress on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/8-cV9q2grVC4VYyLCW8xJBl1qtft5tHto_abEeDFT1I.jpg" width="150"/>
-                <div class="text-sm product-name">Beach Dress</div>
-                <div class="text-sm text-gray-500 product-price">$156.99</div>
-                <div class="flex space-x-2">
-                    <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                    <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
-                </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item dress">
+            <img alt="Casual Beach dress on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/xpdQXvr7JdhquEtGowr-sALc8mIP9GcJKXnIj0V3AKI.jpg" width="150"/>
+            <div class="text-sm product-name">Casual Beach</div>
+            <div class="text-sm text-gray-500 product-price">$120.99</div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
-            <div class="space-y-2 cursor-pointer product-item pants">
-                <img alt="Denim Jeans on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/YDD6-xNMMb2nd2Io8ujXxz3dihrgUNLcoZEFcGgHd2s.jpg" width="150"/>
-                <div class="text-sm product-name">Denim Jeans</div>
-                <div class="text-sm text-gray-500 product-price">$80.99</div>
-                <div class="flex space-x-2">
-                    <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                    <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
-                </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item dress">
+            <img alt="Boho Strappy dress on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/qGXvATDdkpu0588vloa429WDCLVGFXFLOUsCJLndW6s.jpg" width="150"/>
+            <div class="text-sm product-name">Boho Strappy</div>
+            <div class="text-sm text-gray-500 product-price">$110.99 <span class="text-red-500">30% Off</span></div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
-            <div class="space-y-2 cursor-pointer product-item pants">
-                <img alt="Chino Pants on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/2gckCnAxUnOl3O7pnnwFfvfPiIfD_YzmII33wL6AXcI.jpg" width="150"/>
-                <div class="text-sm product-name">Chino Pants</div>
-                <div class="text-sm text-gray-500 product-price">$70.99</div>
-                <div class="flex space-x-2">
-                    <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                    <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
-                </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item pants">
+            <img alt="Denim Jeans on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/YDD6-xNMMb2nd2Io8ujXxz3dihrgUNLcoZEFcGgHd2s.jpg" width="150"/>
+            <div class="text-sm product-name">Denim Jeans</div>
+            <div class="text-sm text-gray-500 product-price">$80.99</div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
-            <div class="space-y-2 cursor-pointer product-item blazers">
-                <img alt="Formal Blazer on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/BBsdRy8aiYcEfXGOvcGrCU8F5rcVQD7NDuOSntKSKlw.jpg" width="150"/>
-                <div class="text-sm product-name">Formal Blazer</div>
-                <div class="text-sm text-gray-500 product-price">$150.99</div>
-                <div class="flex space-x-2">
-                    <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                    <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
-                </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item pants">
+            <img alt="Chino Pants on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/2gckCnAxUnOl3O7pnnwFfvfPiIfD_YzmII33wL6AXcI.jpg" width="150"/>
+            <div class="text-sm product-name">Chino Pants</div>
+            <div class="text-sm text-gray-500 product-price">$70.99</div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
-            <div class="space-y-2 cursor-pointer product-item blazers">
-                <img alt="Casual Blazer on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/0tBcX1VtKJZA26-wS-IdGfb4psuA_D2VfHtldEcRwGE.jpg" width="150"/>
-                <div class="text-sm product-name">Casual Blazer</div>
-                <div class="text-sm text-gray-500 product-price">$130.99</div>
-                <div class="flex space-x-2">
-                    <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                    <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
-                </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item blazers">
+            <img alt="Formal Blazer on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/BBsdRy8aiYcEfXGOvcGrCU8F5rcVQD7NDuOSntKSKlw.jpg" width="150"/>
+            <div class="text-sm product-name">Formal Blazer</div>
+            <div class="text-sm text-gray-500 product-price">$150.99</div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
-            <div class="space-y-2 cursor-pointer product-item jackets">
-                <img alt="Leather Jacket on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/n_4Tanf3ID1VYqqxr7-8_TyZhe0i3PHi6md1F8iSN5c.jpg" width="150"/>
-                <div class="text-sm product-name">Leather Jacket</div>
-                <div class="text-sm text-gray-500 product-price">$200.99</div>
-                <div class="flex space-x-2">
-                    <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                    <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
-                </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item blazers">
+            <img alt="Casual Blazer on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/0tBcX1VtKJZA26-wS-IdGfb4psuA_D2VfHtldEcRwGE.jpg" width="150"/>
+            <div class="text-sm product-name">Casual Blazer</div>
+            <div class="text-sm text-gray-500 product-price">$130.99</div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
-            <div class="space-y-2 cursor-pointer product-item jackets">
-                <img alt="Denim Jacket on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/T8U-W5i2ag8espW2tJOz3t-O9O0nO1uLUCk0PO5kL9Y.jpg" width="150"/>
-                <div class="text-sm product-name">Denim Jacket</div>
-                <div class="text-sm text-gray-500 product-price">$180.99</div>
-                <div class="flex space-x-2">
-                    <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                    <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
-                </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item jackets">
+            <img alt="Leather Jacket on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/n_4Tanf3ID1VYqqxr7-8_TyZhe0i3PHi6md1F8iSN5c.jpg" width="150"/>
+            <div class="text-sm product-name">Leather Jacket</div>
+            <div class="text-sm text-gray-500 product-price">$200.99</div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
+            </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item jackets">
+            <img alt="Denim Jacket on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/T8U-W5i2ag8espW2tJOz3t-O9O0nO1uLUCk0PO5kL9Y.jpg" width="150"/>
+            <div class="text-sm product-name">Denim Jacket</div>
+            <div class="text-sm text-gray-500 product-price">$180.99</div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
         </div>
     </div>
     <div class="bg-white rounded-lg shadow-lg w-full max-w-md mt-8 hidden" id="product-detail">
-        <!-- Product Detail -->
         <div class="relative">
             <img alt="Product Image" class="w-full h-80 object-cover rounded-t-lg" height="320" id="product-image" src="https://storage.googleapis.com/a1aa/image/6WNZyIZYEoJCUyPOXwIjOWOabVClBFBjL4cl2m5nR_0.jpg" width="300"/>
             <div class="absolute top-4 left-4">
@@ -233,7 +240,6 @@
             </div>
         </div>
     </div>
-
 
 
 
