--- a/index.html
+++ b/index.html
@@ -8,31 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
   <style>
-   .category-button.active {
-            @apply bg-red-500 text-white;
-        }
-        .category-button:hover {
-            @apply text-red-500;
-        }
-        .category-button {
-            position: relative;
-            transition: color 0.3s ease;
-        }
-        .category-button::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: 2px solid #00ff00;
-            box-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-        .category-button:hover::before {
-            opacity: 1;
-        }
+ 
   </style>
 
  </head>
@@ -78,12 +54,12 @@
     </div>
     
     <!-- Categories -->
-    <div class="flex justify-around p-4 border-b">
-        <button class="px-4 py-2 category-button active" onclick="showCategory('all')">All</button>
-        <button class="px-4 py-2 category-button" onclick="showCategory('dress')">Dress</button>
-        <button class="px-4 py-2 category-button" onclick="showCategory('pants')">Pants</button>
-        <button class="px-4 py-2 category-button" onclick="showCategory('blazers')">Blazers</button>
-        <button class="px-4 py-2 category-button" onclick="showCategory('jackets')">Jackets</button>
+   <div class="flex justify-around p-4 border-b bg-white">
+        <button class="px-4 py-2 bg-red-500 text-white" onclick="showCategory('all')">All</button>
+        <button class="px-4 py-2 hover:text-red-500" onclick="showCategory('dress')">Dress</button>
+        <button class="px-4 py-2 hover:text-red-500" onclick="showCategory('pants')">Pants</button>
+        <button class="px-4 py-2 hover:text-red-500" onclick="showCategory('blazers')">Blazers</button>
+        <button class="px-4 py-2 hover:text-red-500" onclick="showCategory('jackets')">Jackets</button>
     </div>
     
     <!-- Login Popup -->
