--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
    <div class="flex justify-around p-4 border-b bg-white">
         <button class="px-4 py-2 bg-red-500 text-white" onclick="showCategory('all')">All</button>
         <button class="px-4 py-2 hover:text-red-500" onclick="showCategory('dress')">Dress</button>
-        <button class="px-4 py-2 hover:text-red-500" onclick="showCategory('pants')">Pants</button>
+        <button class="px-4 py-2 hover:text-red-500" onclick="showCategory('pants')">Pant</button>
         <button class="px-4 py-2 hover:text-red-500" onclick="showCategory('blazers')">Blazers</button>
-        <button class="px-4 py-2 hover:text-red-500" onclick="showCategory('jackets')">Jackets</button>
+        <button class="px-4 py-2 hover:text-red-500" onclick="showCategory('jackets')">Jacket</button>
     </div>
     
     <!-- Login Popup -->
